# NFP_Predictor

./: .env  .gitignore  .pre-commit-config.yaml  Final_Runner.ipynb  MASTER_SNAPSHOT_ANALYSIS_REPORT.md  MODEL_IMPROVEMENT_ROADMAP.md  README.md  VISUALIZATION_GUIDE.md  ambiguous_demoted_exact_features.csv  ambiguous_still_ambiguous_exact_features.csv  analyze_seasonal_adjustment.py  calculate_directional_accuracy.py  calculate_directional_accuracy_sa.py  changes.md  cross_source_analysis.ipynb  faster.md  feature_analysis.csv  feature_list.csv  fred_exog_selection.ipynb  generate_backtest_visualizations.py  leakage.md  master_snapshot_analysis.ipynb  nfp_relative_timing.py  pipeline.aux  pipeline.out  pipeline.tex  pipeline.toc  presentation.aux  presentation.nav  presentation.out  presentation.tex  presentation.toc  presentation.vrb  prosper_exog_selection.ipynb  pyproject.toml  regenerate_plot.py  requirements.txt  run_adp_scraper.sh  run_full_project.py  settings.py  (+8 more)
.claude/: CLAUDE.md  settings.local.json
Best_features_selected/: README.md
Data_ETA_Pipeline/: __init__.py  adp_pipeline.py  analyze_noaa_weights_vintage.py  create_master_snapshots.py  feature_selection_engine.py  fred_employment_pipeline.py  inject_dynamic_economist_features.py  load_economist_panel.py  load_fred_exogenous.py  load_futures_data.py  load_prosper_data.py  load_unifier_data.py  nfp_release_calendar.py  noaa_pipeline.py  perf_stats.py  perf_summary.py  test_feature_selection.py  utils.py
Load_Data/: README.md  fred_snapshots.py  load_ADP_Employment_change.py  load_fred_exogenous.py  load_noaa_data.py  load_prosper_data.py  load_unifier_data.py  nfp_release_calendar.py  run_adp_scraper.sh  scrape_bls_schedule.py
Notes/: dynamic_reselection_variance_analysis.md
Predict/: predict_next_month.py
Prepare_Data/: README.md  build_revised_targets.py  create_adp_snapshots.py  create_master_snapshots.py  create_noaa_master.py  create_noaa_weighted.py  nfp_relative_timing.py  prepare_fred_snapshots.py
Train/: BACKTEST_README.md  README.md  __init__.py  backtest_archiver.py  backtest_results.py  baselines.py  branch_target_selection.py  candidate_pool.py  config.py  data_load_check.py  data_loader.py  evaluate_predictions.py  feature_engineering.py  feature_engineering_sa_nsa_gap.py  feature_importance.py  grid_search.py  hyperopt.py  hyperparameter_tuning.py  joint_tuning.py  model.py  nsa_acceleration.py  pipeline_helpers.py  prune_snapshots_to_selected_features.py  reduce_features.py  rerun_post_train_adj_and_consensus.py  revision_features.py  short_pass_selection.py  snapshot_loader.py  test_pipeline.py  train_lightgbm_nfp.py  train_sarima_sa.py  training_dataset_cache.py  universe_cache.py  variance_metrics.py
_output_final_stage_experiments/: panel_anchor_kalman_metrics.csv  (+1 more)
(+3709 files in other folders)
